--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -27,9 +28,23 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         app:tabBackground="@color/colorPrime"
+        app:tabGravity="fill"
+        app:tabIndicator="@color/colorPrime"
+        app:tabIndicatorHeight="5dp"
+        app:tabSelectedTextColor="@color/white"
         app:tabIndicatorColor="@color/white"
         app:tabTextColor="@color/white">
 
     </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/view_page"
+        android:layout_marginTop="25dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
 
 </LinearLayout>
+
+</layout>
